# nodekit

./: .dockerignore  .env.nodekit-server.example  .gitattributes  .gitignore  ABOUT.md  AGENTS.md  Dockerfile.server  Makefile  NODEKIT_SERVER.md  README.md  developer.md  pyproject.toml  todo.md
nodekit-rs/: .gitignore  Cargo.toml  README.md  benchmark.py  build.sh  build_video.sh  develop.sh  fix_pyi.py  fix_stub.py  fix_stubs.py  node_test.py  nodekit_rs.pyi  packages  pyproject.toml  schema.json  stub_gen.sh  temp.sh
nodekit-rs/benches/: bench.rs
nodekit-rs/examples/: stub_gen.rs
nodekit-rs/images/: nodekit-rs.drawio
nodekit-rs/nodekit-rs-action/: Cargo.toml
nodekit-rs/nodekit-rs-action/src/: lib.rs
nodekit-rs/nodekit-rs-asset/: Cargo.toml
nodekit-rs/nodekit-rs-asset/src/: asset.rs  copy.rs  download.rs  error.rs  lib.rs  unzip.rs
nodekit-rs/nodekit-rs-asset/test_files/: lorem.txt
nodekit-rs/nodekit-rs-audio/: Cargo.toml
nodekit-rs/nodekit-rs-audio/src/: error.rs  format.rs  lib.rs  rate.rs  size_multiplier.rs  src_channels.rs
nodekit-rs/nodekit-rs-board/: Cargo.toml
nodekit-rs/nodekit-rs-board-constants/: Cargo.toml
nodekit-rs/nodekit-rs-board-constants/src/: lib.rs
nodekit-rs/nodekit-rs-board/src/: lib.rs
nodekit-rs/nodekit-rs-card/: Cargo.toml  tests.py
nodekit-rs/nodekit-rs-card/src/: asset.rs  card.rs  card_type.rs  justification.rs  lib.rs  region.rs  region_mask.rs  text.rs
nodekit-rs/nodekit-rs-client/: Cargo.toml  develop.sh  fix_stubs.py  nodekit_rs_client.pyi  pyproject.toml
nodekit-rs/nodekit-rs-client/examples/: stub_gen.rs
nodekit-rs/nodekit-rs-client/src/: lib.rs
nodekit-rs/nodekit-rs-cursor/: Cargo.toml  cursor
nodekit-rs/nodekit-rs-cursor/src/: clamped.rs  lib.rs
nodekit-rs/nodekit-rs-download/: Cargo.toml
nodekit-rs/nodekit-rs-download/src/: download.rs  error.rs  lib.rs  media_type.rs
nodekit-rs/nodekit-rs-fb/: Cargo.toml  fb.sh
nodekit-rs/nodekit-rs-fb/schema/: asset.fbs  card.fbs  click.fbs  display.fbs  effect.fbs  graph.fbs  key_press.fbs  mouse.fbs  node.fbs  noop.fbs  reset.fbs  response.fbs  sensor.fbs  text.fbs  timer.fbs  transition.fbs
nodekit-rs/nodekit-rs-fb/src/: asset.rs  card.rs  click.rs  display.rs  effect.rs  graph.rs  key_press.rs  lib.rs  mouse.rs  node.rs  noop.rs  reset.rs  response.rs  sensor.rs  text.rs  timer.rs  transition.rs
nodekit-rs/nodekit-rs-frame/: Cargo.toml
nodekit-rs/nodekit-rs-frame/src/: audio.rs  board.rs  lib.rs  video.rs
nodekit-rs/nodekit-rs-graph/: Cargo.toml  allow_clippy.py  deny_clippy.py  dump_schema.py  schema.json  typify.sh
nodekit-rs/nodekit-rs-graph-temp/: Cargo.toml
nodekit-rs/nodekit-rs-graph-temp/src/: lib.rs
nodekit-rs/nodekit-rs-graph/src/: lib.rs  node.rs  transition.rs
nodekit-rs/nodekit-rs-image/: Cargo.toml
nodekit-rs/nodekit-rs-image/benches/: bench.rs
nodekit-rs/nodekit-rs-image/src/: convert.rs  decoded_image.rs  error.rs  jpg.rs  lib.rs  png.rs  svg.rs
nodekit-rs/nodekit-rs-messages/: Cargo.toml
nodekit-rs/nodekit-rs-messages/src/: lib.rs
nodekit-rs/nodekit-rs-models/: Cargo.toml  develop.sh  nodekit_rs_models.pyi  pyproject.toml  stub_gen.sh
nodekit-rs/nodekit-rs-models/examples/: stub_gen.rs
nodekit-rs/nodekit-rs-models/src/: asset.rs  board.rs  button_state.rs  card_type.rs  lib.rs  node.rs  region.rs  sensor.rs  slider.rs  state.rs  text_card.rs  text_entry.rs
nodekit-rs/nodekit-rs-net/: Cargo.toml
nodekit-rs/nodekit-rs-net/src/: command.rs  error.rs  lib.rs  received.rs
nodekit-rs/nodekit-rs-node/: Cargo.toml
nodekit-rs/nodekit-rs-node/src/: card.rs  entity.rs  lib.rs  media_type.rs  rect.rs  timer.rs
nodekit-rs/nodekit-rs-png/: Cargo.toml
nodekit-rs/nodekit-rs-png/src/: lib.rs
nodekit-rs/nodekit-rs-render/: Cargo.toml
nodekit-rs/nodekit-rs-render/src/: asset.rs  asset_key.rs  audio.rs  blit_rect.rs  board.rs  card_rect.rs  dirty_rect.rs  error.rs  hoverable.rs  image.rs  lib.rs  overlap.rs  rect.rs  selectable.rs  selectables.rs  sensor.rs  video.rs  visual_buffer.rs
nodekit-rs/nodekit-rs-request/: Cargo.toml
nodekit-rs/nodekit-rs-request/src/: action.rs  error.rs  lib.rs  serialize.rs
nodekit-rs/nodekit-rs-response/: Cargo.toml
nodekit-rs/nodekit-rs-response/benches/: bench.rs
nodekit-rs/nodekit-rs-response/src/: error.rs  lib.rs
nodekit-rs/nodekit-rs-slider/: Cargo.toml  track.raw
nodekit-rs/nodekit-rs-slider/benches/: bench.rs
nodekit-rs/nodekit-rs-slider/src/: error.rs  lib.rs  slider_rects.rs  thumb.rs  thumb_color.rs  track.rs
nodekit-rs/nodekit-rs-socket/: Cargo.toml
nodekit-rs/nodekit-rs-socket/benches/: bench.rs
nodekit-rs/nodekit-rs-socket/src/: error.rs  lib.rs
nodekit-rs/nodekit-rs-state/: Cargo.toml
nodekit-rs/nodekit-rs-state/benches/: bench.rs
nodekit-rs/nodekit-rs-state/src/: board.rs  error.rs  lib.rs  node.rs  pointer.rs  rect.rs  tick_result.rs  timer.rs  transition.rs  video.rs
nodekit-rs/nodekit-rs-stub-gen/: Cargo.toml
nodekit-rs/nodekit-rs-stub-gen/src/: main.rs
nodekit-rs/nodekit-rs-text/: Cargo.toml  done_text.raw  lorem.txt
nodekit-rs/nodekit-rs-text/backgrounds/: text.raw  text_entry.raw
nodekit-rs/nodekit-rs-text/benches/: bench.rs
nodekit-rs/nodekit-rs-text/fonts/: SOURCE
nodekit-rs/nodekit-rs-text/src/: error.rs  gutter.rs  justification.rs  lib.rs  surface.rs  text.rs  text_buffers.rs  text_entry.rs  text_entry_buffers.rs
nodekit-rs/nodekit-rs-text/text-entry/: text-entry.raw
nodekit-rs/nodekit-rs-text/text_entry/: gutter_se.raw  gutter_sw.raw  (+5 more)
nodekit-rs/nodekit-rs-video/: Cargo.toml  build.rs  out.py  out.raw
nodekit-rs/nodekit-rs-views/: Cargo.toml
nodekit-rs/nodekit-rs-visual/: 16x16.raw  Cargo.toml  cursor
nodekit-rs/py-examples/: .gitignore  benchmark.py  benchmark.txt  multiframe.py  node_test.py  select.py  slider.py  state.py  text_entry.py
nodekit-rs/src/: args.rs  asset.rs  blit.rs  blitters.rs  board.rs  extractors.rs  lib.rs  main.rs  packet_iter.rs  rect.rs  state.rs  video.rs  video_asset.rs  video_indices.rs
nodekit-rs/visual-findings/: re-renders.py  render-to-wrong-shape.py  text-card-padding.py
(+844 files in other folders)
