[build-system]
requires = ["setuptools>=42", "wheel"]  # Add build dependencies
build-backend = "setuptools.build_meta"

[project]
name = "nodekit"
version = "0.1.0"
authors = [
    { name = "Michael J. Lee", email = "mil@mit.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "pillow>=10.4",
    "pydantic>=2.9.2",
    "Jinja2>=3.1.4",
    "fastapi[standard]>=0.116.1",
]

[project.urls]
repository = "https://github.com/intelligence-observatory/nodekit"

[tool.ty.src]
exclude =["tests"]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[tool.setuptools.package-data]
nodekit = [
    "**/*.j2",
    "_static/**"
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
