[build-system]
requires = ["setuptools>=42", "wheel"]  # Add build dependencies
build-backend = "setuptools.build_meta"

[project]
name = "nodekit"
version = "0.2.0"
authors = [
    { name = "Michael J. Lee", email = "mil@mit.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "pillow>=10.4",
    "pydantic>=2.9.2",
    "Jinja2>=3.1.4",
    "fastapi[standard]>=0.116.1",
    "boto3>=1.40.55",
    "matplotlib>=3.10.8",
]

[project.urls]
repository = "https://github.com/intelligence-observatory/nodekit"

[tool.ty.src]
exclude = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.package-data]
nodekit = [
    "**/*.j2",
    "_static/**"
]

[dependency-groups]
dev = [
    "griffe-pydantic>=1.1.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=2.0.1",
    "pytest>=8.3",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
