[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nodekit"
version = "0.3.0.dev4"
authors = [
    { name = "Michael J. Lee", email = "mil@mit.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "pillow>=10.4",
    "pydantic>=2.9.2",
    "packaging>=25.0",
    "Jinja2>=3.1.4",
    "fastapi[standard]>=0.116.1",
    "boto3>=1.40.55",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "psycopg[binary]>=3",
    "sqlmodel>=0.0.38",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.1",
    "platformdirs>=4.5.1",
]

[dependency-groups]
dev = [
    "griffe-pydantic>=1.1.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=2.0.1",
    "pytest>=8.3",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
    "black>=25.12.0",
    "pandas-stubs~=2.3.3",
    "boto3-stubs~=1.42.10",
]

[project.urls]
repository = "https://github.com/intelligence-observatory/nodekit"

[tool.uv.build-backend]
module-name = ["nodekit", "nodekit_server"]
module-root = "src"

[tool.ty.src]
exclude = []

[tool.ruff]
line-length = 100


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
