[workspace]
members = [
    "nodekit-rs-asset",
    "nodekit-rs-models",
    "nodekit-rs-image",
    "nodekit-rs-png",
    "nodekit-rs-render",
    "nodekit-rs-slider",
    "nodekit-rs-state",
    "nodekit-rs-text",
    "nodekit-rs-video",
    "nodekit-rs-visual",
]

[package]
name = "nodekit-rs"
version = "0.1.0"
edition = "2024"
authors = ["Esther Alter <alters@mit.edu>"]
description = "Render nodekit as a bitmap"

[lib]
name = "nodekit_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
nodekit-rs-render = { path = "nodekit-rs-render" }
nodekit-rs-state = { path = "nodekit-rs-state" }
pyo3.workspace = true
pyo3-stub-gen.workspace = true

[workspace.dependencies]
blittle = { version = "0.4.3", features = ["overlay"] }
bytemuck = "1.25.0"
cosmic-text = "0.17.1"
criterion = "0.8.1"
fast_image_resize = "6.0.0"
hashbrown = "0.16.1"
hex_color = "3.0.0"
itertools = "0.14.0"
jpeg-decoder = "0.3.2"
markdown = "1.0.0"
nine-slices = { path = "../../nine-slices", default-features = false }
numpy = "0.27.1"
png = "0.18.0"
pyo3 = { version = "0.27.1", features = ["experimental-inspect", "extension-module"] }
pyo3-stub-gen = "0.17.2"
reqwest = { version = "0.13.1", features = ["blocking"] }
scuffle-ffmpeg = { version = "0.3.5", default-features = false, features = ["link_vcpkg_ffmpeg"] }
scraper = "0.25.0"
slotmap = "1.1.1"
thiserror = "2.0.18"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4"] }
zip = "7.2.0"
