[package]
name = "nodekit-rs-asset"
version = "0.1.0"
edition = "2024"

[dependencies]
async_zip.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
jpeg-decoder.workspace = true
tempdir.workspace = true
tokio.workspace = true
uuid.workspace = true