[package]
name = "nodekit-rs-client"
version = "0.1.0"
edition = "2024"

[dependencies]
nodekit-rs-request = { path = "../nodekit-rs-request" }
nodekit-rs-response = { path = "../nodekit-rs-response" }
pyo3.workspace = true
pyo3-stub-gen.workspace = true

[lib]
name = "nodekit_rs_client"
crate-type = ["cdylib"]