[package]
name = "nodekit-rs-download"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace = true
futures.workspace = true
reqwest.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
jpeg-decoder.workspace = true
tempdir.workspace = true
tokio.workspace = true
uuid.workspace = true