[package]
name = "nodekit-rs-graph-temp"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
nodekit-rs-board = { path = "../nodekit-rs-board" }
hashbrown.workspace = true
nodekit-rs-fb = { path = "../nodekit-rs-fb" }
paste.workspace = true
slotmap.workspace = true
url.workspace = true