[package]
name = "nodekit-rs-image"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
bytemuck.workspace = true
nodekit-rs-asset = { path = "../nodekit-rs-asset" }
nodekit-rs-card = { path = "../nodekit-rs-card" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
png.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false