[package]
name = "nodekit-rs-image"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
bytemuck.workspace = true
jpeg-decoder.workspace = true
nodekit-rs-asset = { path = "../nodekit-rs-asset" }
nodekit-rs-models = { path = "../nodekit-rs-models" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
png.workspace = true
resvg.workspace = true
thiserror.workspace = true

[dev-dependencies]
nodekit-rs-png = { path = "../nodekit-rs-png" }