
[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "nodekit_rs_models"
version = "0.1.0"
authors = [
    { name = "Esther Alter", email = "alters@mit.edu" }
]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/experimental-inspect"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/*.rs" }]

[tool.pyright]
ignore = ["**/type_error_cases/*.py"]