[package]
name = "nodekit-rs-net"
version = "0.1.0"
edition = "2024"

[dependencies]
async_zmq.workspace = true
flatbuffers.workspace = true
nodekit-rs-fb = { path = "../nodekit-rs-fb" }
nodekit-rs-request = { path = "../nodekit-rs-request" }
nodekit-rs-response = { path = "../nodekit-rs-response" }
serde_json.workspace = true
thiserror.workspace = true