[package]
name = "nodekit-rs-render"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
bytemuck.workspace = true
hashbrown.workspace = true
nodekit-rs-image = { path = "../nodekit-rs-image" }
nodekit-rs-models = { path = "../nodekit-rs-models" }
nodekit-rs-text = { path = "../nodekit-rs-text" }
nodekit-rs-video = { path = "../nodekit-rs-video" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
pyo3.workspace = true
pyo3-stub-gen.workspace = true
slotmap.workspace = true
thiserror.workspace = true
uuid.workspace = true