[package]
name = "nodekit-rs-messages"
version = "0.1.0"
edition = "2024"

[dependencies]
flatbuffers.workspace = true
nodekit-rs-fb = { path = "../nodekit-rs-fb" }
nodekit-rs-graph = { path = "../nodekit-rs-graph" }
pyo3.workspace = true
pyo3-stub-gen.workspace = true
serde_json.workspace = true
thiserror.workspace = true