[package]
name = "nodekit-rs-request"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode.workspace = true
glam.workspace = true
nodekit-rs-graph = { path = "../nodekit-rs-graph" }
pyo3.workspace = true
pyo3-stub-gen.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde = { version = "1.0.228", features = ["derive"] }