[package]
name = "nodekit-rs-response"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
fast_image_resize.workspace = true
flatbuffers.workspace = true
nodekit-rs-fb = { path = "../nodekit-rs-fb" }
nodekit-rs-board = { path = "../nodekit-rs-board" }
png.workspace = true
pyo3.workspace = true
pyo3-stub-gen.workspace = true
thiserror.workspace = true