[package]
name = "nodekit-rs-response"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode.workspace = true
fast_image_resize.workspace = true
png.workspace = true
pyo3.workspace = true
pyo3-stub-gen.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false