[package]
name = "nodekit-rs-socket"
version = "0.1.0"
edition = "2024"

[dependencies]
nodekit-rs-request = { path = "../nodekit-rs-request" }
nodekit-rs-response = { path = "../nodekit-rs-response" }
thiserror.workspace = true
zmq.workspace = true

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true

[[bench]]
name = "bench"
harness = false