[package]
name = "nodekit-rs-socket"
version = "0.1.0"
edition = "2024"

[dependencies]
nodekit-rs-request = { path = "../nodekit-rs-request" }
nodekit-rs-response = { path = "../nodekit-rs-response" }
serde_json.workspace = true
thiserror.workspace = true
zmq.workspace = true

[dev-dependencies]
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "bench"
harness = false