[package]
name = "nodekit-rs-state"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
bytemuck.workspace = true
glam.workspace = true
hashbrown.workspace = true
hex_color.workspace = true
nodekit-rs-graph = { path = "../nodekit-rs-graph" }
nodekit-rs-image = { path = "../nodekit-rs-image" }
nodekit-rs-request = { path = "../nodekit-rs-request" }
nodekit-rs-response = { path = "../nodekit-rs-response" }
nodekit-rs-text = { path = "../nodekit-rs-text" }
nodekit-rs-video = { path = "../nodekit-rs-video" }
slotmap.workspace = true
thiserror.workspace = true

[dev-dependencies]
png.workspace = true