[package]
name = "nodekit-rs-text"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
bytemuck.workspace = true
cosmic-text.workspace = true
markdown.workspace = true
nodekit-rs-models = { path = "../nodekit-rs-models" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
pyo3.workspace = true
thiserror.workspace = true

[dev-dependencies]
png.workspace = true
criterion.workspace = true

[[bench]]
name = "bench"
harness = false