[package]
name = "nodekit-rs-text"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
cosmic-text.workspace = true
markdown.workspace = true
nodekit-rs-card = { path = "../nodekit-rs-card" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
pyo3.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
nodekit-rs-png = { path = "../nodekit-rs-png" }

[[bench]]
name = "bench"
harness = false