[package]
name = "nodekit-rs-text"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
bytemuck.workspace = true
cosmic-text.workspace = true
hex_color.workspace = true
lazy_static.workspace = true
markdown.workspace = true
nodekit-rs-models = { path = "../nodekit-rs-models" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
pyo3.workspace = true
roxmltree.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
nodekit-rs-png = { path = "../nodekit-rs-png" }

[[bench]]
name = "bench"
harness = false