[package]
name = "nodekit-rs-video"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
nodekit-rs-models = { path = "../nodekit-rs-models" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
scuffle-ffmpeg.workspace = true
thiserror.workspace = true

[dev-dependencies]
nodekit-rs-png = { path = "../nodekit-rs-png" }
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "e2bb93a35f70851c2bfb60006f1f7659cd1637d1"

[package.metadata.vcpkg.target]
x86_64-apple-darwin = { triplet = "x64-osx" }
x86_64-unknown-linux-gnu = {triplet = "x64-linux", install = [
    "ffmpeg"
] }
