[package]
name = "nodekit-rs-video"
version = "0.1.0"
edition = "2024"

[dependencies]
blittle.workspace = true
nodekit-rs-asset = { path = "../nodekit-rs-asset" }
nodekit-rs-models = { path = "../nodekit-rs-models" }
nodekit-rs-visual = { path = "../nodekit-rs-visual" }
scuffle-ffmpeg.workspace = true
thiserror.workspace = true

[dev-dependencies]
nodekit-rs-png = { path = "../nodekit-rs-png" }
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.12.12"

[package.metadata.vcpkg.target]
aarch64-apple-darwin = { dependencies = ["ffmpeg"] }
x86_64-unknown-linux-gnu = { triplet = "x64-linux", install = ["ffmpeg"] }
